force-app/main/default/objects/Quotation__c/fields/Token_Amount__c.field-meta.xml
<CustomField>
    <fullName>Token_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Token Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>