force-app/main/default/objects/Quotation__c/fields/Total_Discount_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Applicable__c</fullName>
    <label>Total Discount Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>