force-app/main/default/objects/Quotation__c/fields/Total_Discount_Rates__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Rates__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Discounts given by Sales Manager on the Basic and Floor Rise and PLC</inlineHelpText>
    <label>Total Discounted Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>