force-app/main/default/objects/Quotation__c/fields/Total_Registration_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Registration_Cost__c</fullName>
    <formula>Stamp_Duty__c +  MVAT_Quot__c +  Registration_Charges_Quot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Registration Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>