force-app/main/default/objects/Quotation__c/fields/Total_SD_Registration_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Total_SD_Registration_Bucket__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DLD Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>