force-app/main/default/objects/Quotation__c/fields/Total_Society_Charges_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Total_Society_Charges_Bucket__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Society Charges Bucket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>