force-app/main/default/objects/Quotation__c/fields/TotalAdditionalCarpark__c.field-meta.xml
<CustomField>
    <fullName>TotalAdditionalCarpark__c</fullName>
    <formula>Car_Park_Count_1__c+ Car_Park_Count_2__c+ Car_Park_Count_3__c+ Car_Park_Count_4__c+ Car_Park_Count_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Additional Carpark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>