force-app/main/default/objects/Quotation__c/fields/TotalEarmarkedCarpark__c.field-meta.xml
<CustomField>
    <fullName>TotalEarmarkedCarpark__c</fullName>
    <formula>Earmarked_Count_1__c+ Earmarked_Count_2__c+Earmarked_Count_3__c+Earmarked_Count_4__c+Earmarked_Count_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Earmarked Carpark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>