force-app/main/default/objects/Quotation__c/fields/Water_Connection_Charges_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Water_Connection_Charges_Quotation__c</fullName>
    <label>Water Connection Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>