force-app/main/default/objects/Quotation__c/listViews/Sales_Ops_Quotation.listView-meta.xml
<ListView>
    <fullName>Sales_Ops_Quotation</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Ops</label>
    <queue>Sales_Ops</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>